kubernetes/k3s/Code/k3s/nginx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx1-deploy
  namespace: nginx
spec:
  replicas: 3
  selector:
    matchLabels: 
      app: nginx1-app
  template:
    metadata:
      labels:
        app: nginx1-app
    spec:
      containers:
      - name: nginx1-app
        image: nginx
        ports:
        - name: http
          containerPort: 80
