kubernetes/k3s/Code/k3s/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx1-ingress
  namespace: nginx
spec:
  rules:
  - host: "*.lab.thinhphung.online"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx1-svc 
            port:
              number: 80
