kubernetes/k3s/Code/k3s/traefik-dashboard-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: kube-system
  # annotations:
  #   kubernetes.io/ingress.class: traefik
spec:
  rules:
    # - host: traefik.${DOMAIN}
    - host: "*.lab.thinhphung.online"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik-dashboard
                port:
                  number: 9000        # port to service
